[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Objects/VRButton.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 0.06
bottom_radius = 0.08
height = 0.05

[sub_resource type="CylinderShape" id=3]
radius = 0.04
height = 0.03

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.0823529, 0.0823529, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.1, 0.075, 0.1 )

[node name="VRButton" type="StaticBody"]
script = ExtResource( 1 )

[node name="Area2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Area2"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0379521, 0 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.2
shadow_enabled = true
omni_range = 1.0

[node name="MovementTween" type="Tween" parent="."]

[node name="CSGCombiner" type="CSGCombiner" parent="."]

[node name="MeshInstance" type="CSGBox" parent="CSGCombiner"]
operation = 1
width = 0.2
height = 0.1
depth = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0 )
operation = 2
radius = 0.08
height = 0.1
sides = 64
material = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, 0 )
shape = SubResource( 5 )
[connection signal="area_entered" from="Area2" to="." method="_on_Area2_area_entered"]
[connection signal="area_exited" from="Area2" to="." method="_on_Area2_area_exited"]
